# imgexflask

./: .flaskenv  .gitignore  README.md  setup.cfg  start_server.py  wsgi.py
src/imgexflask/: __init__.py  routes.py
src/imgexflask/pages/: private.php
src/imgexflask/static/: style.css
src/imgexflask/templates/: base.html  flask_index.html  index.html  index_copy.html  index_old.html  login.html  page.html  private_template.html
