[options]
package_dir=
    =src
packages=find:
# required dependencies, see https://setuptools.pypa.io/en/latest/userguide/quickstart.html#dependency-management
install_requires =
    flask
    flask_flatpages
    python-dotenv
    flask-login

[options.packages.find]
where=src
install_requires =
    importlib; python_version >= "3.0"